[tool.poetry]
name = "simpleicons"
version = "5.11.0"
description = "Use a wide-range of icons derived from the simple-icons/simple-icons repo in python."
authors = ["Sachin Raja <sachinraja2349@gmail.com>"]
license = "MIT"
include = ["simpleicons/icons/*", "simpleicons/all.py"]
readme = "README.md"
repository="https://github.com/sachinraja/simpleicons"

[tool.poe.tasks]
test = "poetry run pytest tests"
"lint" = "poetry run black . --check"
"lint:fix" = "poetry run black ."
generate = { script = "scripts.build_package:build" }
_build = "poetry build"
build = ["generate", "_build"]

[tool.poetry.dependencies]
python = "^3.8"
reportlab = {version = "^3.5.68", optional = true}
Pillow = {version = "^8.3.1", optional = true}
svglib = {version = "^1.1.0", optional = true}
semantic-version = {version = "^2.8.5", optional = true}
requests = {version = "^2.25.1", optional = true}
GitPython = {version = "^3.1.18", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.6b0"
poethepoet = "^0.10.0"
pre-commit = "^2.13.0"
Pillow = "^8.3.1"
svglib = "^1.1.0"
reportlab = "^3.5.68"

[tool.poetry.extras]
imaging = ["reportlab", "Pillow", "svglib"]
auto-update = ["requests", "semantic-version", "GitPython"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
