[tool.poetry]
name = "simpleicons"
version = "7.14.0"
description = "Use a wide-range of icons derived from the simple-icons/simple-icons repo in python."
authors = ["Sachin Raja <sachinraja2349@gmail.com>"]
license = "MIT"
include = ["simpleicons/icons.py", "simpleicons/all.py"]
readme = "README.md"
repository = "https://github.com/sachinraja/simple-icons-py"

[tool.poe.tasks]
test = "poetry run pytest tests"
"lint" = "poetry run black . --check"
"lint:fix" = "poetry run black ."
generate = { script = "scripts.build_package:build" }
_build = "poetry build"
build = ["generate", "_build"]

[tool.poetry.dependencies]
python = "^3.8"
reportlab = { version = "^3.6.3", optional = true }
Pillow = { version = "^9.2.0", optional = true }
svglib = { version = "^1.1.0", optional = true }
semantic-version = { version = "^2.8.5", optional = true }
requests = { version = "^2.26.0", optional = true }
GitPython = { version = "^3.1.24", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
black = "^21.6b0"
poethepoet = "^0.16.0"
pre-commit = "^2.15.0"
Pillow = "^9.2.0"
svglib = "^1.1.0"
reportlab = "^3.5.68"

[tool.poetry.extras]
imaging = ["reportlab", "Pillow", "svglib"]
auto-update = ["requests", "semantic-version", "GitPython"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
